--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@sanity/image-url": "^1.0.1",
+    "@types/react-redux": "^7.1.24",
     "framer-motion": "^6.4.3",
     "next": "latest",
+    "next-sanity": "^0.6.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
