--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next-sanity": "^0.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
