--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@reduxjs/toolkit": "^1.8.3",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^6.4.3",
     "next": "latest",
     "next-sanity": "^0.6.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-redux": "^8.0.2"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
